package feeds

import (
	"context"

	"github.com/nostressdev/feeds-framework/proto"
	"github.com/nostressdev/nerrors"
)

func (s *FeedsService) CreateFeed(ctx context.Context, request *proto.CreateFeedRequest) (*proto.CreateFeedResponse, error) {
	if err := request.Validate(); err != nil {
		return nil, nerrors.BadRequest.Wrap(err, "validate request")
	}
	feed, err := s.Storage.CreateFeed(request.UserId, request.ExtraData)
	if err != nil {
		return nil, err
	}
	response := &proto.CreateFeedResponse{
		Feed: feed,
	}
	if err := response.Validate(); err != nil {
		return nil, nerrors.BadRequest.Wrap(err, "validate response")
	}
	return response, nil
}
